Fix headline spacing on homepage when stacked vertically under photos

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -48,6 +48,10 @@ body
 
 .mm-home-row
     margin-bottom: 30px
+    .mm-snapshot
+        margin-bottom: 20px
+    h2
+        margin-top: 0px
 
 .mm-top-couple
     background-position: 50% 50%
